<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/button_select_profile"
        android:icon="@drawable/ic_baseline_person_24"
        app:showAsAction="ifRoom"
        android:title="@string/profile"
        android:onClick="buttonClick"
        >
    </item>
    <item
        android:id="@+id/button_select_text"
        android:icon="@drawable/ic_baseline_keyboard_24"
        app:showAsAction="ifRoom"
        android:title="@string/text_button_text"
        android:onClick="buttonClick"
        >
    </item>
    <item
        android:id="@+id/button_select_voice"
        android:icon="@drawable/ic_baseline_keyboard_voice_24"
        app:showAsAction="ifRoom"
        android:title="@string/voice_button_text"
        android:onClick="buttonClick"
        >
    </item>

</menu>