<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/signup"
        android:gravity="center_horizontal"
        android:layout_marginTop="60dp"
        android:textSize="34sp"
        android:textStyle="bold"
        android:textColor="#070707" />
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        app:boxBackgroundMode="filled"
        app:boxBackgroundColor="@color/white"
        app:endIconMode="clear_text"
        android:hint="@string/enter_name"
        app:boxStrokeColor="@color/orange"
        app:startIconDrawable="@drawable/ic_baseline_person_24"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            ></com.google.android.material.textfield.TextInputEditText>

    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        app:boxBackgroundMode="filled"
        app:boxBackgroundColor="@color/white"
        app:endIconMode="clear_text"
        android:hint="@string/enter_email"
        app:boxStrokeColor="@color/orange"
        app:startIconDrawable="@drawable/ic_baseline_email_24"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            ></com.google.android.material.textfield.TextInputEditText>

    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        app:startIconDrawable="@drawable/ic_baseline_person_24"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="40dp"
        app:boxBackgroundMode="filled"
        app:boxBackgroundColor="#FFFFFF"
        app:boxStrokeColor="#06B2BB"
        app:endIconMode="password_toggle"
        android:hint="@string/enter_id_password"
        android:layout_marginRight="40dp"
        android:layout_height="wrap_content"
        app:errorEnabled="true">
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="text"
            android:maxLines="1">
        </com.google.android.material.textfield.TextInputEditText>
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        app:boxBackgroundMode="filled"
        app:boxBackgroundColor="@color/white"
        app:endIconMode="clear_text"
        android:hint="@string/enter_phoneNo"
        app:boxStrokeColor="@color/orange"
        app:startIconDrawable="@drawable/ic_baseline_phone_24"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            ></com.google.android.material.textfield.TextInputEditText>

    </com.google.android.material.textfield.TextInputLayout>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/gender"
        android:textSize="24sp"
        android:layout_marginTop="30dp"
        android:textColor="@color/black"
        android:layout_marginLeft="40dp"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <RadioButton
            android:layout_width="100dp"
            android:layout_marginLeft="10dp"
            android:layout_height="wrap_content"
            android:paddingLeft="5dp"

            android:text="@string/Male"
            android:layout_gravity="center_horizontal"/>
        <RadioButton
            android:layout_width="100dp"
            android:paddingLeft="5dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="23dp"
            android:text="@string/Female"
            android:layout_gravity="left"/>
        <RadioButton
            android:layout_marginLeft="25dp"
            android:layout_width="wrap_content"
            android:paddingLeft="5dp"
            android:layout_height="wrap_content"

            android:text="@string/NotToSay"
            android:layout_gravity="left"/>
    </LinearLayout>
    <com.google.android.material.button.MaterialButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/signup_user"
        android:textSize="20dp"
        android:layout_marginTop="20dp"
        app:backgroundTint="@color/orange"
        android:layout_gravity="center_horizontal"
        android:clickable="true"
        android:focusable="true"

        >

    </com.google.android.material.button.MaterialButton>


</LinearLayout>