<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:gravity="center_horizontal"
        android:layout_marginTop="70dp"
        android:textSize="34sp"
        android:textStyle="bold"
        android:textColor="#070707" />
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_marginTop="80dp"
        android:layout_marginLeft="40dp"
        app:boxBackgroundMode="filled"
        app:boxBackgroundColor="#FFFFFF"
        app:boxStrokeColor="#06B2BB"
        app:endIconMode="clear_text"
        app:startIconDrawable="@drawable/ic_baseline_person_24"
        app:startIconContentDescription="@string/enter_id_password"
        android:hint="@string/enter_id"
        android:layout_marginRight="40dp"
        android:layout_height="wrap_content">
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="text"
            android:maxLines="1">
        </com.google.android.material.textfield.TextInputEditText>
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        app:startIconDrawable="@drawable/ic_baseline_person_24"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="40dp"
        app:boxBackgroundMode="filled"
        app:boxBackgroundColor="#FFFFFF"
        app:boxStrokeColor="#06B2BB"
        app:endIconMode="password_toggle"
        android:hint="@string/enter_id_password"
        android:layout_marginRight="40dp"
        android:layout_height="wrap_content"
        app:errorEnabled="true">
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="textPassword"
            android:maxLines="1">
        </com.google.android.material.textfield.TextInputEditText>
    </com.google.android.material.textfield.TextInputLayout>
    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/Remember_checkbox"
        android:text="@string/Remember"
        android:layout_gravity="center_horizontal"/>
    <com.google.android.material.button.MaterialButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/Login_id"
        android:text="@string/Login1"
        android:layout_gravity="center_horizontal"
        android:clickable="true"
        app:cornerRadius="20dp"
        android:focusable="true"

        >

    </com.google.android.material.button.MaterialButton>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/forgot_pasword"
        android:gravity="center_horizontal"
        android:layout_marginTop="40dp"
        android:textSize="24sp"
        android:textStyle="bold"
        android:textColor="#070707" />

</LinearLayout>