<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/signup"
        android:gravity="center_horizontal"
        android:layout_marginTop="60dp"
        android:textSize="34sp"
        android:textStyle="bold"
        android:textColor="#070707" />
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        app:boxBackgroundMode="filled"
        app:boxBackgroundColor="@color/white"
        app:endIconMode="clear_text"
        android:hint="@string/enter_name"
        app:boxStrokeColor="@color/blue"
        app:startIconDrawable="@drawable/ic_baseline_person_24"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            > </com.google.android.material.textfield.TextInputEditText>

    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        app:boxBackgroundMode="filled"
        app:boxBackgroundColor="@color/white"
        app:endIconMode="clear_text"
        android:hint="@string/enter_email"
        app:boxStrokeColor="@color/orange"
        app:startIconDrawable="@drawable/ic_baseline_email_24"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            > </com.google.android.material.textfield.TextInputEditText>

    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        app:startIconDrawable="@drawable/ic_baseline_person_24"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="40dp"
        app:boxBackgroundMode="filled"
        app:boxBackgroundColor="#FFFFFF"
        app:boxStrokeColor="#06B2BB"
        app:endIconMode="password_toggle"
        android:hint="@string/enter_id_password"
        android:layout_marginRight="40dp"
        android:layout_height="wrap_content"
        app:errorEnabled="true">
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="textPassword"
            android:maxLines="1"
            >
        </com.google.android.material.textfield.TextInputEditText>
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        app:boxBackgroundMode="filled"
        app:boxBackgroundColor="@color/white"
        app:endIconMode="clear_text"
        android:hint="@string/enter_phoneNo"
        app:boxStrokeColor="@color/orange"
        app:startIconDrawable="@drawable/ic_baseline_phone_24"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            > </com.google.android.material.textfield.TextInputEditText>

    </com.google.android.material.textfield.TextInputLayout>


    <!--    android:layout_gravity="center_horizontal"-->

    <!--    android:layout_gravity="start"-->
    <GridLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginStart="20dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="30dp"
                android:text="@string/gender"
                android:textColor="@color/black"
                android:textSize="24sp" />

            <RadioGroup
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@id/gender">
                <RadioButton
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="30dp"
                    android:paddingStart="5dp"
                    android:text="@string/Male"/>

                <RadioButton
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="30dp"
                    android:paddingStart="5dp"
                    android:text="@string/Female"/>
                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="30dp"
                    android:paddingStart="5dp"
                    android:text="@string/NotToSay"/>
            </RadioGroup>

        <!--    android:layout_gravity="start"-->
        </LinearLayout>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="0"
            android:layout_column="1"
            android:layout_gravity="center_vertical"
            android:layout_marginTop="60dp"
            android:layout_marginStart="60dp"
            android:clickable="true"
            android:focusable="true"
            android:text="@string/signup_user"
            android:textColor="@color/grey_100"
            android:textSize="20sp"
            app:backgroundTint="@color/darkblue"
            >
        </Button>
    </GridLayout>
    <!--    <com.google.android.material.button.MaterialButton-->
<!--        android:textAppearance="@style/TextAppearance.MaterialComponents.Button"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:text="@string/signup_user"-->
<!--        android:textSize="20sp"-->
<!--        android:layout_marginTop="20dp"-->
<!--        app:backgroundTint="@color/orange"-->
<!--        android:layout_gravity="center_horizontal"-->
<!--        android:clickable="true"-->
<!--        android:focusable="true"        >-->

<!--    </com.google.android.material.button.MaterialButton>-->


</LinearLayout>
<!--<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"-->
<!--    xmlns:app="http://schemas.android.com/apk/res-auto"-->
<!--    xmlns:tools="http://schemas.android.com/tools"-->
<!--    android:layout_width="match_parent"-->
<!--    android:layout_height="match_parent"-->
<!--    tools:context=".signup">-->

<!--</androidx.constraintlayout.widget.ConstraintLayout>-->