<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/three_d_box_light">

    <com.amazonaws.mobileconnectors.lex.interactionkit.ui.InteractiveVoiceView
        android:id="@+id/voiceInterface"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_above="@+id/space_interactive_voice_component"
        android:layout_centerHorizontal="true"
        android:background="#00000000">
    </com.amazonaws.mobileconnectors.lex.interactionkit.ui.InteractiveVoiceView>

    <Space
        android:id="@+id/space_interactive_voice_component"
        android:layout_width="match_parent"
        android:layout_height="@dimen/activity_inter_group_separation"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:text="@string/transcript"
            android:id="@+id/transcriptLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:paddingTop="50dp"
            android:textAlignment="textEnd"
            android:textColor="@android:color/holo_red_dark"
            android:textStyle="bold" />

        <TextView
            android:text="@string/transcript_placeholder"
            android:id="@+id/transcriptTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:textAlignment="textEnd"
            android:textColor="@color/text_color_1"/>

        <TextView
            android:text="@string/response_as_text"
            android:id="@+id/responseLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:paddingTop="50dp"
            android:textColor="@android:color/holo_red_dark"
            android:textStyle="bold" />

        <TextView
            android:text="@string/response_placeholder"
            android:id="@+id/responseTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:textColor="@color/text_color_1"/>
    </LinearLayout>


</RelativeLayout>
