<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/blue_flowers"
    >

    <RelativeLayout
        android:layout_width="350dp"
        android:layout_height="525dp"
        android:orientation="vertical"
        android:background="#55000000"
        android:layout_marginTop="100dp"
        android:layout_marginStart="25dp"
        android:paddingBottom="20dp"
        android:paddingStart="5dp"
        android:paddingEnd="5dp"
        >
        <TextView
            android:text="@string/screen_options_main_message"
            android:textColor="#fafaff"
            android:layout_marginTop="70dp"
            android:textSize="30sp"
            android:gravity="center_horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textView_options_main"
            android:fontFamily="@font/lobster_regulat"
            />

        <Button
            android:id="@id/button_select_profile"
            android:layout_width="150dp"
            android:layout_height="100dp"
            android:layout_marginStart="95dp"
            android:layout_below="@id/textView_options_main"
            android:layout_marginTop="50dp"
            android:background="@drawable/stone_bg"
            android:text="@string/profile"
            android:textColor="#efefff"
            android:textSize="21sp"
            android:focusable="true"
            android:onClick="buttonClick"
            android:fontFamily="@font/lobster_regulat"
            >
        </Button>

        <Button
            android:id="@id/button_select_text"
            android:layout_width="150dp"
            android:layout_height="100dp"
            android:layout_marginStart="10dp"
            android:layout_below="@id/button_select_profile"
            android:layout_marginTop="40dp"
            android:background="@drawable/stone_bg"
            android:text="@string/text_button_text"
            android:textColor="#efefff"
            android:textSize="21sp"
            android:focusable="true"
            android:onClick="buttonClick"
            android:fontFamily="@font/lobster_regulat"
            >

        </Button>

        <Button
            android:id="@id/button_select_voice"
            android:layout_width="150dp"
            android:layout_height="100dp"
            android:layout_marginStart="180dp"
            android:layout_below="@id/button_select_profile"
            android:layout_marginTop="40dp"
            android:background="@drawable/stone_bg"
            android:text="@string/voice_button_text"
            android:textAllCaps="false"
            android:textColor="#efefff"
            android:textSize="21sp"
            android:focusable="true"
            android:onClick="buttonClick"
            android:fontFamily="@font/lobster_regulat"
            >
        </Button>
    </RelativeLayout>
</RelativeLayout>
